[gd_scene load_steps=2 format=2]

[ext_resource path="res://atividade_semana_3.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="resposta_1" type="ColorRect" parent="."]
margin_left = 352.0
margin_top = 8.0
margin_right = 732.0
margin_bottom = 62.0

[node name="label_resposta_1" type="Label" parent="resposta_1"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 382.0
margin_bottom = 54.0
align = 1
valign = 1

[node name="enunciado_1" type="Label" parent="."]
margin_left = 9.0
margin_top = -10.0
margin_right = 294.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 143, 31 )
text = "1-Crie uma lista preenchida e mostre na tela"
align = 1
valign = 1

[node name="button_1" type="Button" parent="."]
margin_left = 771.0
margin_top = 17.0
margin_right = 997.0
margin_bottom = 61.0
text = "Exibir lista preenchida"

[node name="resposta_2" type="ColorRect" parent="."]
margin_left = 349.0
margin_top = 120.0
margin_right = 729.0
margin_bottom = 174.0

[node name="label_resposta_2" type="Label" parent="resposta_2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -3.0
margin_right = 378.0
margin_bottom = 53.0
align = 1
valign = 1

[node name="enunciado_2" type="Label" parent="."]
margin_left = 9.0
margin_top = 64.0
margin_right = 559.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 143, 31 )
text = "2-Crie uma lista vazia, preencha com os dados enviados pelo usuário e mostre na tela"
align = 1
valign = 1

[node name="button_2" type="Button" parent="."]
margin_left = 767.0
margin_top = 121.0
margin_right = 1003.0
margin_bottom = 168.0
text = "Exibir lista preenchida pelo usuário"

[node name="dadoUsuario1" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 122.0
margin_right = 74.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 11, 46 )

[node name="Label" type="Label" parent="dadoUsuario1"]
margin_left = 11.0
margin_top = 63.0
margin_right = 51.0
margin_bottom = 77.0
text = "dado 1"

[node name="dadoUsuario2" type="LineEdit" parent="."]
margin_left = 109.0
margin_top = 121.0
margin_right = 167.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( -202, -45 )

[node name="Label" type="Label" parent="dadoUsuario2"]
margin_left = 11.0
margin_top = 63.0
margin_right = 51.0
margin_bottom = 77.0
text = "dado 2"

[node name="dadoUsuario3" type="LineEdit" parent="."]
margin_left = 206.0
margin_top = 120.0
margin_right = 264.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( -202, -45 )

[node name="Label" type="Label" parent="dadoUsuario3"]
margin_left = 11.0
margin_top = 63.0
margin_right = 51.0
margin_bottom = 77.0
text = "dado 3"

[node name="enunciado_3" type="Label" parent="."]
margin_left = 15.0
margin_top = 243.0
margin_right = 319.0
margin_bottom = 257.0
text = "3-Crie uma função que retorne um texto na tela"

[node name="resposta_3" type="ColorRect" parent="."]
margin_left = 350.0
margin_top = 271.0
margin_right = 730.0
margin_bottom = 331.0

[node name="label_resposta_3" type="Label" parent="resposta_3"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 382.0
margin_bottom = 59.0
align = 1
valign = 1

[node name="button_3" type="Button" parent="."]
margin_left = 771.0
margin_top = 272.0
margin_right = 1006.0
margin_bottom = 319.0
text = "Exibir texto"

[node name="enunciado_4" type="Label" parent="."]
margin_left = 17.0
margin_top = 355.0
margin_right = 109.0
margin_bottom = 379.0
text = "4-Crie uma função que receba um valor inserido pelo usuário e retorne na tela."

[node name="resposta_4" type="ColorRect" parent="."]
margin_left = 348.0
margin_top = 403.0
margin_right = 728.0
margin_bottom = 463.0

[node name="label_resposta_4" type="Label" parent="resposta_4"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = -1.0
margin_right = 381.0
margin_bottom = 57.0
align = 1
valign = 1

[node name="button_4" type="Button" parent="."]
margin_left = 777.0
margin_top = 399.0
margin_right = 1009.0
margin_bottom = 457.0
text = "Exibir valor"

[node name="valorUsuario" type="LineEdit" parent="."]
margin_left = 82.0
margin_top = 403.0
margin_right = 191.0
margin_bottom = 455.0
rect_pivot_offset = Vector2( 11, 46 )

[node name="Label" type="Label" parent="valorUsuario"]
margin_left = -7.0
margin_top = 66.0
margin_right = 123.0
margin_bottom = 80.0
text = "Informe um número"

[connection signal="pressed" from="button_1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="button_2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="button_3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="button_4" to="." method="_on_button_4_pressed"]
